--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,12 +23,14 @@ services:
       context: ./client
       dockerfile: Dockerfile
     container_name: client
-    depends_on:
-      - api
+    stdin_open: true
     volumes:
-      - ./client:/usr/src/app
+      - './client:/app'
+      - '/app/node_modules'
     ports:
-      - 1234:1234
+      - 3000:3000
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     networks:
       - tsnet
 
