--- a/api/package.json
+++ b/api/package.json
@@ -27,16 +27,16 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.14",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.0",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.4.2",
+    "jest": "^26.6.0",
     "supertest": "^5.0.0",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0-pre.63",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.3"
   }
 }
