fix the code style in the API

--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "mysql",
   "host": "mysql",
   "port": 3306,
-  "username": "tscms",
+  "username": "ts_cms",
   "password": "secret",
-  "database": "dbtscms",
+  "database": "db_ts_cms",
   "synchronize": true,
   "logging": false,
   "entities": [
